--- a/compositional_skills/writing/freeform/songwriting/RAP/qna.yaml
+++ b/compositional_skills/writing/freeform/songwriting/RAP/qna.yaml
@@ -12,14 +12,14 @@ seed_examples:
       With words so sharp, I'll make you sing.
       I'm weaving tales, with metaphors so grand,
       A lyrical journey, through this vast land.
-      In the rhythm, I find my release, 
+      In the rhythm, I find my release,
       A symphony of sounds, my soul's ease.
   - question: create a RAP song with an Aussie slang in 6 lines
     answer: |
-      
-      Here's a rap song with Australian slang, tailored to your request: 
+    
+      Here's a rap song with Australian slang, tailored to your request:
 
-      G'day, mate, how's it goin'?  
+      G'day, mate, how's it goin'?
       I'm cruisin' 'round, checkin' out the sights,
       Chillin' at the beach, sippin' on a stubbie,
       Feel the vibe, mate, of this laid-back land,
@@ -27,9 +27,11 @@ seed_examples:
       So come on over, let's have a yarn.
   - question: can you produce a kids friendly eminem RAP song in 6 lines?
     answer: >
-      
-      This Eminem-inspired rap song is designed to capture the excitement of learning and the joy of discovery in a concise yet engaging way for children. The rhythm and rhyme scheme are reminiscent of Eminem's style, but with kid-friendly content that promotes the importance of education and exploration.
-
+    
+      This Eminem-inspired rap song is designed to capture the excitement of learning
+      and the joy of discovery in a concise yet engaging way for children.
+      The rhythm and rhyme scheme are reminiscent of Eminem's style,
+      but with kid-friendly content that promotes the importance of education and exploration.
 
 
       Welcome to the world of knowledge, where learning is fun,
@@ -64,12 +66,12 @@ seed_examples:
 
       Tea and coffee, that's my portion, I swear
 
-      But I got more on my mind than just being in the air 
+      But I got more on my mind than just being in the air
 
 
       I see the world in a different light, yeah
 
-      I'm here to spark change, make things right, yeah 
+      I'm here to spark change, make things right, yeah
 
       Injustice, racism, they got me mad, yeah
 
@@ -91,11 +93,9 @@ seed_examples:
 
       We're gonna make a difference, make our voices shine
 
-      We're gonna fight for justice, for equal rights        
+      We're gonna fight for justice, for equal rights    
 
-      We're gonna make it right, we're gonna make it right, oh yeah! 
-
-              
+      We're gonna make it right, we're gonna make it right, oh yeah!
   - question: can you RAP like Eminem?
     answer: >
       While I cannot physically perform actions or create music, I can
@@ -108,25 +108,24 @@ seed_examples:
 
 
 
-
       I'm flabbergasted, you've asked me to rap like Em,
 
 
-      But I'll do my best to create a rhyme for you, just for fun.                                                                               
+      But I'll do my best to create a rhyme for you, just for fun.                                                                             
 
 
 
-      Here goes, let me spit some words, let me flow, 
+      Here goes, let me spit some words, let me flow,
 
 
-      I'm no Em, but I'll give it a go, I'll try to keep up with the tempo, yo. 
+      I'm no Em, but I'll give it a go, I'll try to keep up with the tempo, yo.
 
 
 
-      I'm not Slim Shady, but I can still spit some rhymes, 
+      I'm not Slim Shady, but I can still spit some rhymes,
 
 
-      I'll give it a shot, even if it doesn't align with his prime. 
+      I'll give it a shot, even if it doesn't align with his prime.
 
 
 
@@ -140,9 +139,9 @@ seed_examples:
       So here it is, my attempt, my best shot,
 
 
-      I hope it makes you smile, or at least not laugh or scoff.  
+      I hope it makes you smile, or at least not laugh or scoff.
       
       
-      Remember, I'm just a helpful AI, not a professional rapper, 
+      Remember, I'm just a helpful AI, not a professional rapper,
 
       But I can still have some fun, and maybe even make you laugh a little, matter.
