--- a/compositional_skills/extraction/information/named_entities/chage_date_format/qna.yaml
+++ b/compositional_skills/extraction/information/named_entities/chage_date_format/qna.yaml
@@ -1,13 +1,12 @@
 ---
 task_description: This skill will identify the time from the given sentence and
-  convert it to the 24-hour format if the given time is in 12-hour format and
-  vice versa
+  convert 12-hour format to 24hour format.
 created_by: hitshiroya
 seed_examples:
 - question: |
     I will be leaving from Red Hat Tower-6 at 6:30 PM to head to my hotel
     Cocoon.
-  answer: 
+  answer:
     I will be leaving from Red Hat Tower-6 at 18:30 to head to my hotel Cocoon.
   attribution:
   - source: self-authored
@@ -15,7 +14,7 @@ seed_examples:
 - question: |
     I reached the airport at 3:30 PM and booked a cab at 3:40 PM to reach
     the hotel.
-  answer: 
+  answer:
     I reached the airport at 15:30 and booked a cab at 15:40 to reach the
     hotel.
   attribution:
@@ -23,7 +22,7 @@ seed_examples:
     license: Apache-2.0
 - question: |
     I have to reach the airport at 9:50 AM to catch my flight on time.
-  answer: 
+  answer:
     I have to reach the airport at 9:50 AM to catch my flight on time.
   attribution:
   - source: self-authored
@@ -31,7 +30,7 @@ seed_examples:
 - question: |
     Everyone should make a habit of waking up early in the morning before
     5:30 AM.
-  answer: 
+  answer:
     Everyone should make a habit of waking up early in the morning before
     5:30 AM.
   attribution:
@@ -40,10 +39,9 @@ seed_examples:
 - question: |
     Company meeting will start at 10:30 in the morning, so make sure you
     reach on time.
-  answer: 
+  answer:
     Company meeting will start at 10:30 in the morning, so make sure you
     reach on time.
   attribution:
   - source: self-authored
     license: Apache-2.0
-    
