--- a/compositional_skills/writing/freeform/fun_facts/qna.yaml
+++ b/compositional_skills/writing/freeform/fun_facts/qna.yaml
@@ -36,3 +36,22 @@ seed_examples:
     attribution:
       - source: self-authored
         license: Apache-2.0
+  - question: Tell me some fun facts about the Amazon rainforest
+    answer: >
+      - The Amazon rainforest called the lungs of the earth.
+      - The Amazon rainforest spans 9 countries.
+      - Amazon river is the largest by volume.
+      - The Amazon rainforest is the home to deadly creatures.
+      - The Amazon Rainforest is also inhabited by 400-500 indigenous tribes
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - question: Tell me some fun facts about the Ancient Egypt
+    answer: >
+      - Most Ancient Egyptian pyramids were built as tombs for pharaohs.
+      - The Pyramid of Khufu at Giza is the largest Egyptian pyramid.
+      - The Egyptian alphabet contained more than 700 hieroglyphs!
+      - Cats were considered sacred animals by the Ancient Egyptians.
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
