YAML indentation fix
Signed-off-by: Máirín Duffy <duffy@redhat.com>
Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/compositional_skills/writing/freeform/jokes/knockknock/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/knockknock/qna.yaml
@@ -1,173 +1,173 @@
 task_description: telling knock knock jokes
 created_by: tjcramer
 seed_examples:
-- answer: |
-    (j) knock knock
-    (b) who's there?
-    (j) figs
-    (b) figs who?
-    (j) Figs the doorbell, it's broken!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) Luke.
-    (b) Luke who?
-    (j) Luke through the peep hole and you'll see me.
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) Annie.
-    (b) Annie who?
-    (j) Annie thing you can do, I can do better!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) Cow says.
-    (b) Cow says who?
-    (j) No, a cow says mooooo!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) Tank.
-    (b) Tank who?
-    (j) You're welcome.
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) Water.
-    (b) Water who?
-    (j) Water you telling jokes for?  Get back to work!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) Leaf.
-    (b) Leaf who?
-    (j) Leaf me along!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) Dozen.
-    (b) Dozen who?
-    (j) dozen anyone want to let me in?
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) Dozen.
-    (b) Dozen who?
-    (j) dozen anyone want to let me in?
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) musky.
-    (b) musky who?
-    (j) Why am i so lazy?  Must key lounge??
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) walleye.
-    (b) walleye who?
-    (j) Well i can't believe you don't know who!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) orange.
-    (b) orange who?
-    (j) Orange you glad to see me?
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) who.
-    (b) who who?
-    (j) I didn't know you were an owl!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) Ya.
-    (b) Ya who?
-    (j) I'm excited too!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) Kerch.
-    (b) Kerch who?
-    (j) Bless you!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) bally.
-    (b) bally who?
-    (j) It is not, I'm just knocking to get in the door!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
-- answer: |
-    (j) knock knock
-    (b) Who's there?
-    (j) interrupting cow
-    (b) interupting cow
-    (j) mooooooo!
-  question: Tell me a knock knock joke
-  attribution:
-    - source: self-authored
-      license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) who's there?
+      (j) figs
+      (b) figs who?
+      (j) Figs the doorbell, it's broken!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) Luke.
+      (b) Luke who?
+      (j) Luke through the peep hole and you'll see me.
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) Annie.
+      (b) Annie who?
+      (j) Annie thing you can do, I can do better!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) Cow says.
+      (b) Cow says who?
+      (j) No, a cow says mooooo!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) Tank.
+      (b) Tank who?
+      (j) You're welcome.
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) Water.
+      (b) Water who?
+      (j) Water you telling jokes for?  Get back to work!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) Leaf.
+      (b) Leaf who?
+      (j) Leaf me alone!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) Dozen.
+      (b) Dozen who?
+      (j) dozen anyone want to let me in?
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) Dozen.
+      (b) Dozen who?
+      (j) dozen anyone want to let me in?
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) musky.
+      (b) musky who?
+      (j) Why am i so lazy?  Must key lounge??
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) walleye.
+      (b) walleye who?
+      (j) Well i can't believe you don't know who!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) orange.
+      (b) orange who?
+      (j) Orange you glad to see me?
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) who.
+      (b) who who?
+      (j) I didn't know you were an owl!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) Ya.
+      (b) Ya who?
+      (j) I'm excited too!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) Kerch.
+      (b) Kerch who?
+      (j) Bless you!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) bally.
+      (b) bally who?
+      (j) It is not, I'm just knocking to get in the door!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
+  - answer: |
+      (j) knock knock
+      (b) Who's there?
+      (j) interrupting cow
+      (b) interupting cow
+      (j) mooooooo!
+    question: Tell me a knock knock joke
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
